// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone already registered 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    This Email is already registered! Please 
    <a
      href="/user/login"
    >
      login
    </a>
    !
  </p>
  <p>
    
  </p>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone initial 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    
  </p>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone interactive 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    
  </p>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone loggedin 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "alignSelf": "center",
        "avatar": Object {
          "margin": "0 auto",
        },
        "margin": "24px",
      }
    }
  >
    <h1>
      Welcome!
    </h1>
  </section>
  <p>
    
  </p>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    Log Out
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone network failure 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    Check the internet connection? try again later?
  </p>
  <p>
    
  </p>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone registering 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    hold on, we are writing a very important message for you here...
  </p>
  <p>
    
  </p>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    registering...
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone status message 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    here is your status message from api
  </p>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone validation email sent with additional phrase 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    We just sent a email to validate your email address!
     And this is post email validation phrase addition!!!
  </p>
  <p>
    
  </p>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone validation email sent without additional phrase 1`] = `
<section
  className="sc-hwwEjo hpNebt"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Full Name
      </label>
      <input
        className="form-control"
        name="displayName"
        onChange={[Function]}
        placeholder="i.e. John B. Adam"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="i.e. abc@gmail.com"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor=""
      >
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder=""
        type="password"
        value=""
      />
    </div>
  </section>
  <p>
    We just sent a email to validate your email address!
    
  </p>
  <p>
    
  </p>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Register
  </button>
</section>
`;
